<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basic_coordinator"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/basic_coordinator" />
        <item
            android:id="@+id/nav_basic_realm_recycler"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/basic_recycler_view" />
        <item
            android:id="@+id/nav_basic_tab_host"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/basic_tab_host" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
